More formatting and alignment fixes for both IOS and Desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 /* App.css */
 .shared-container {
-  min-height: calc(100vh - 60px); /* Adjust 60px to the height of your footer */
+  min-height: calc(100vh - 60px);
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  align-items: flex-start; /* Aligns children to the start of the container */
   width: 100%;
-  max-width: 1180px;
+
+  max-width: var(--page-max);
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 0 var(--page-pad);
+
+  align-items: stretch; /* important */
 }
 
 /* Resets */
